--- a/roles/galaxy/tasks/main.yml
+++ b/roles/galaxy/tasks/main.yml
@@ -11,7 +11,7 @@
     gpgkey: https://dl.yarnpkg.com/rpm/pubkey.gpg    
   become: yes
   become_user: root
-  become_method: sudo
+  become_method: su
 
 
 # Install EPEL repo, needed for pip and other packages.
@@ -22,7 +22,15 @@
     state: present
   become: yes
   become_user: root
-  become_method: sudo
+  become_method: su
+
+- name: Install python dependencies
+  yum:
+    name: ['python36-pip', 'python36-devel', 'python36', 'gcc', 'make', 'python-virtualenv']
+    state: present
+  become: yes
+  become_user: root
+  become_method: su
 
 
 # Install dependencies
@@ -35,14 +43,14 @@
   notify: "restart galaxy" # in case something upgrades
   become: yes
   become_user: root
-  become_method: sudo
+  become_method: su
 
 - name: Ensure group "galaxy" exists
   group:
     name: galaxy
   become: yes
   become_user: root
-  become_method: sudo   
+  become_method: su   
 
 # This is just a trick so that the synchronize: stage
 # later can install files without needing become: yes
@@ -53,7 +61,7 @@
     name: '{{ ansible_user_id }}'
   become: yes
   become_user: root
-  become_method: sudo   
+  become_method: su   
 
 - name: Ensure user "galaxy" exist
   user:
@@ -61,9 +69,10 @@
     comment: Galaxy server
     group: galaxy
     home: /app
+    password: $6$0IrkgawtZq3P2WB5$XGAVMT9x8OK.giWYSUDT/W9UDIkr.m9c89SnrcGhDQpno/49bQ17ZsDeQvWusKr4aqKPTBELRvKnCk8TDLazP.
   become: yes
   become_user: root
-  become_method: sudo   
+  become_method: su   
 
 
 - name: Ensure galaxy owns home directory
@@ -76,7 +85,7 @@
     recurse: yes
   become: yes
   become_user: root
-  become_method: sudo   
+  become_method: su   
 
 
 # Clone galaxy repo:
@@ -89,7 +98,7 @@
     force: true # Ignore "Local modifications exist"
   become: yes
   become_user: galaxy
-  become_method: sudo
+  become_method: su
 
 
 # Clone galaxy repo:
@@ -101,7 +110,7 @@
     force: true # Ignore "Local modifications exist"    
   become: yes
   become_user: galaxy
-  become_method: sudo
+  become_method: su
 
 
 # Copy config files for galaxy
@@ -140,6 +149,8 @@
   git:
     repo: 'https://github.com/common-workflow-language/galaxy.git'
     dest: /app/galaxy
+    force: true
+
 
 # Pre-install galaxy dependencies using virtualenv
 # NOTE: Galaxy will also do this from run.sh
@@ -159,7 +170,7 @@
     extra_args:  --index-url "https://wheels.galaxyproject.org/simple" --extra-index-url "https://pypi.python.org/simple"
   become: yes
   become_user: galaxy
-  become_method: sudo  
+  become_method: su  
 
 # Make and start a systemd service
 - name: Add galaxy service
@@ -172,7 +183,7 @@
     mode: 0644
   become: yes
   become_user: root
-  become_method: sudo
+  become_method: su
 
 - name: Make sure docker is running
   systemd:
@@ -180,7 +191,7 @@
     name: docker  
   become: yes
   become_user: root
-  become_method: sudo    
+  become_method: su    
 
 - name: Make sure galaxy is running
   systemd:
@@ -190,7 +201,7 @@
     daemon_reload: true # we might just have installed the service above
   become: yes
   become_user: root
-  become_method: sudo    
+  become_method: su    
 
 
 # TODO: install and enable galaxy.service for firewalld  
