Trying to remove some of the become_*

--- a/roles/galaxy/tasks/main.yml
+++ b/roles/galaxy/tasks/main.yml
@@ -10,8 +10,8 @@
     gpgcheck: yes
     gpgkey: https://dl.yarnpkg.com/rpm/pubkey.gpg    
   become: yes
-  become_user: root
-  become_method: su
+  #become_user: root
+  #become_method: su
 
 
 # Install EPEL repo, needed for pip and other packages.
@@ -21,16 +21,16 @@
     name: ['epel-release']
     state: present
   become: yes
-  become_user: root
-  become_method: su
+  #become_user: root
+  #become_method: su
 
 - name: Install python dependencies
   yum:
     name: ['python36-pip', 'python36-devel', 'python36', 'gcc', 'make', 'python-virtualenv']
     state: present
   become: yes
-  become_user: root
-  become_method: su
+  #become_user: root
+  #become_method: su
 
 
 # Install dependencies
@@ -42,8 +42,8 @@
     name: [python-devel, python-pip, gcc, make, postgresql-devel, yarn, bzip2, git, docker]
   notify: "restart galaxy" # in case something upgrades
   become: yes
-  become_user: root
-  become_method: su
+  #become_user: root
+  #become_method: su
 
 - name: Ensure group "galaxy" exists
   group:
@@ -60,8 +60,8 @@
     groups: galaxy
     name: '{{ ansible_user_id }}'
   become: yes
-  become_user: root
-  become_method: su   
+  #become_user: root
+  #become_method: su   
 
 - name: Ensure user "galaxy" exist
   user:
@@ -71,8 +71,8 @@
     home: /app
     password: $6$0IrkgawtZq3P2WB5$XGAVMT9x8OK.giWYSUDT/W9UDIkr.m9c89SnrcGhDQpno/49bQ17ZsDeQvWusKr4aqKPTBELRvKnCk8TDLazP.
   become: yes
-  become_user: root
-  become_method: su   
+  #become_user: root
+  #become_method: su   
 
 
 - name: Ensure galaxy owns home directory
@@ -84,8 +84,8 @@
     state: directory
     recurse: yes
   become: yes
-  become_user: root
-  become_method: su   
+  #become_user: root
+  #become_method: su   
 
 
 # Clone galaxy repo:
@@ -98,7 +98,7 @@
     force: true # Ignore "Local modifications exist"
   become: yes
   become_user: galaxy
-  become_method: su
+  #become_method: su
 
 
 # Clone galaxy repo:
@@ -110,7 +110,7 @@
     force: true # Ignore "Local modifications exist"    
   become: yes
   become_user: galaxy
-  become_method: su
+  #become_method: su
 
 
 # Copy config files for galaxy
@@ -138,8 +138,8 @@
     state: directory
     recurse: yes
   become: yes
-  become_user: root
-  become_method: su
+  #become_user: root
+  #become_method: su
 
 
 #Install yarn repo
@@ -150,7 +150,9 @@
     repo: 'https://github.com/common-workflow-language/galaxy.git'
     dest: /app/galaxy
     force: true
-
+  become: yes
+  become_user: galaxy
+  #become_method: su
 
 # Pre-install galaxy dependencies using virtualenv
 # NOTE: Galaxy will also do this from run.sh
@@ -170,7 +172,7 @@
     extra_args:  --index-url "https://wheels.galaxyproject.org/simple" --extra-index-url "https://pypi.python.org/simple"
   become: yes
   become_user: galaxy
-  become_method: su  
+  #become_method: su  
 
 # Make and start a systemd service
 - name: Add galaxy service
@@ -182,16 +184,16 @@
     group: root
     mode: 0644
   become: yes
-  become_user: root
-  become_method: su
+  #become_user: root
+  #become_method: su
 
 - name: Make sure docker is running
   systemd:
     state: started
     name: docker  
   become: yes
-  become_user: root
-  become_method: su    
+  #become_user: root
+  #become_method: su    
 
 - name: Make sure galaxy is running
   systemd:
@@ -200,8 +202,8 @@
     name: galaxy  
     daemon_reload: true # we might just have installed the service above
   become: yes
-  become_user: root
-  become_method: su    
+  #become_user: root
+  #become_method: su    
 
 
 # TODO: install and enable galaxy.service for firewalld  
