--- a/roles/galaxy/tasks/main.yml
+++ b/roles/galaxy/tasks/main.yml
@@ -187,7 +187,7 @@
 # see https://docs.ansible.com/ansible/latest/modules/firewalld_module.html#firewalld-module
 
 - firewalld:
-    port: 8080 # http-alt / Galaxy
+    port: 8080/http-alt # Galaxy
     permanent: yes
     state: enabled
 
