Don't force "su" method
.. as that means the "galaxy" user must have a my_pass variable,
set to the same as root password (!)

Rather deployers can modify the method locally in their
/etc/ansible/ansible.cfg

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -2,5 +2,5 @@
 - hosts: all
   roles:
     - galaxy
-  vars:
-    - ansible_become_method: su
+      #  vars:
+          #    - ansible_become_method: su
